fix: changed styles for visible language field on form of demo page

--- a/assets/styles/layouts/tests/RequestDemo.scss
+++ b/assets/styles/layouts/tests/RequestDemo.scss
@@ -71,11 +71,7 @@ body {
 
 	iframe {
 		width: 100% !important;
-
-		@media (min-width: $breakpoint-tablet) {
-			min-height: 670px;
-			max-height: 670px;
-		}
+		height: auto;
 	}
 
 	.elementor-section .elementor-container {
